Template data dialog hidden behind navbar - fix z-index for oo-ui-dialog
[3.1.x]

ERM20277

--- a/resources/stylesheets/fixes/desktop.less
+++ b/resources/stylesheets/fixes/desktop.less
@@ -44,6 +44,7 @@ span.ve-ce-branchNode-slug {
 
 // Window must be on top of everything, else, its buttons will get hidden
 // below the top bar in full-screen dialogs or in mobile
+body.mediawiki .oo-ui-windowManager-modal > .oo-ui-dialog,
 .oo-ui-window {
 	z-index: 9999;
 }
